Fix narrative title alignment and icon position

--- a/src/features/navigator/Navigator.module.scss
+++ b/src/features/navigator/Navigator.module.scss
@@ -141,6 +141,7 @@ ul.shared,
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-bottom: 0.5rem;
   }
 
   .tabs-container {
